2021-01-16  Dirk Eddelbuettel  <edd@debian.org>

	* tests/tinytest.R: Test for CODECOV when deciding to run extensive
	tests or just a subset, and set CI=true to enable run full set

	* .github/workflows/stale.yaml: Run weekly instead of daily

2021-01-14  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Date, Version): Release 1.0.6

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem
        * vignettes/rmd/Rcpp.bib: Idem
        * inst/bib/Rcpp.bib: Idem

2021-01-13  Dirk Eddelbuettel  <edd@debian.org>

        * vignettes/rmd/Rcpp.bib: Updated package versions
        * inst/bib/Rcpp.bib: Idem

2021-01-02  Dirk Eddelbuettel  <edd@debian.org>

	* R/Rcpp.package.skeleton.R: Wrap any() around grepl()

2020-12-22  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/stale.yaml: Adding a staleness monitor labeling
	and ultimately closing issues and PRs after suitably long windows

2020-12-16  Dirk Eddelbuettel  <edd@debian.org>

	* inst/NEWS.Rd: Updated for recent activity

	* .github/workflows/ci.yaml: Add container-based CI runner
	* README.md: Add new badge

2020-11-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: More URL updates, e.g. http -> https
	* README.md: Ditto
	* inst/CITATION: Ditto
	* man/Rcpp-package.Rd: Ditto

	* inst/CITATION: Change from PeerJ Preprint to TAS

2020-10-25  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* inst/include/Rcpp/generated/InternalFunction__ctors.h: Switch XPtr
	finalizer argument from false to true

2020-10-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/lang.h: Remove spurious whitespace

	* vignettes/.gitignore: Refined to no longer ignore pdf files
	* vignettes/pdf/*: Added

	* inst/NEWS.Rd: Updated for two PRs

2020-10-21  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem
